# hanaburtinnetcore

./: .dockerignore  .eslintrc  .eslintrc.json  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: all-test-run.yml  approval-bot.yml  auto-approver.yml  dependabot-reviewer.yml  remove-auto-merge.yml  run-js-tests.yml  run-python-tests.yml
src/: .env.example  README.md  configurations_mypy_django_plugin.py  manage.py  package-lock.json  poetry.py  pyproject.toml  pytest.ini  wsgi.py
src/backoffice/: asgi.py  settings.py  tailwind.config.js  urls.py  webpack.config.js  wsgi.py
src/backoffice/settings/: base.py
src/backoffice/templates/: base.html
src/hanaburtincore/: README.md  pyproject.toml
src/hanaburtincore/authentication/: middleware.py
src/hanaburtincore/content/: apps.py  models.py  operations.py  queries.py
src/hanaburtincore/content/migrations/: 0002_article_published_at_article_redacted_at_and_more.py
src/hanaburtincore/typing/: __init__.py
src/hanaburtincore/utils/: localtime.py  operations.py
src/hanaburtincore/utils/operations/: __init__.py  errors.py
src/interfaces/backoffice/: urls.py
src/interfaces/backoffice/docs/: urls.py
src/interfaces/backoffice/static/: manifest.json
src/interfaces/backoffice/static_src/: .babelrc  .stylelintrc.json  package-lock.json  package.json  postcss.config.js  tailwind.config.js
src/interfaces/backoffice/static_src/src/styles/: index.css
src/interfaces/backoffice/templates/: base.html
src/interfaces/backoffice/templates/docs/django/: styling.html
src/interfaces/backoffice/views/: _generic.py  _login.py
src/localdev/settings/: __init__.py  _base.py  _interfaces.py
src/poetry/: __init__.py  _docker.py  _general.py  _js_tools.py  _python_linters.py  _python_tests.py  _servers.py  _utils.py
src/queenbees/core/: models.py
src/queenbees/core/authentication/: middleware.py
src/queenbees/core/content/: admin.py  apps.py  models.py  operations.py  queries.py
src/queenbees/core/content/migrations/: 0001_initial.py  0003_alter_article_id_alter_file_id_articledraft.py
src/queenbees/core/interfaces/: urls.py
src/queenbees/core/typing/: _middleware.py
src/queenbees/interfaces/api/: urls.py
src/queenbees/interfaces/api/graphql/: __init__.py  errors.py
src/queenbees/interfaces/api/graphql/content/: __init__.py  _errors.py  _queries.py  _types.py
src/queenbees/interfaces/api/graphql/content/_mutations/: __init__.py  _errors.py  article_drafts.py  articles.py
src/queenbees/interfaces/api/graphql/core/: __init__.py  _queries.py  _types.py
src/queenbees/interfaces/backoffice/: urls.py
src/queenbees/interfaces/backoffice/content/: urls.py
src/queenbees/interfaces/backoffice/content/views/: __init__.py  _article.py
src/queenbees/interfaces/backoffice/docs/: urls.py
src/queenbees/interfaces/backoffice/docs/django/: urls.py  views.py
src/queenbees/interfaces/backoffice/static_src/: package-lock.json  package.json  postcss.config.js
src/queenbees/interfaces/backoffice/static_src/src/styles/: cards.css  index.css  navbar.css  tables.css
src/queenbees/interfaces/backoffice/static_src/src/styles/content/: preview.css
src/queenbees/interfaces/backoffice/static_src/webpack/: webpack.config.dev.js
src/queenbees/interfaces/backoffice/templates/: base.html  index.html  menu.html
src/queenbees/interfaces/backoffice/templates/content/: article-detail.html  article-list.html
src/queenbees/interfaces/backoffice/templates/docs/django/: styling.html
src/queenbees/interfaces/backoffice/templates/partials/: menu-items.html
src/queenbees/interfaces/backoffice/templates/registration/: login.html
src/queenbees/interfaces/backoffice/views/: __init__.py
src/queenbees/settings/: __init__.py  base.py  interfaces.py
src/queenbees/utils/: environ.py
src/queenbees/utils/operations/: decorators.py
src/queenbees/utils/registry/: __init__.py  _core.py
src/settings/: __init__.py  base.py  interfaces.py
src/tests/: conftest.py  settings.py
src/tests/factories/: content.py  users.py
src/tests/fixtures/: __init__.py  clients.py  content.py  users.py
src/tests/functional/interfaces/api/graphql/content/: test_queries.py
src/tests/functional/interfaces/api/graphql/core/: test_queries.py
src/tests/functional/interfaces/backoffice/content/views/: test_views.py
src/tests/functional/interfaces/backoffice/views/: test_login.py
src/tests/functional/interfaces/common/: test_healthchecks.py
src/tests/integration/: conftest.py
src/tests/integration/common/content/: test_models.py  test_operations.py  test_queries.py
src/tests/integration/content/: models.py  test_models.py  test_operations.py  test_queries.py
src/tests/settings/: __init__.py  _base.py  _interfaces.py  _mixins.py
src/tests/types/: __init__.py  clients.py  fixtures.py
src/tests/unit/utils/: test_environ.py  test_localtime.py  test_operations.py  test_registry.py
